--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Summarized Articles</title>
+  <title>Daily Digest</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Lora:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/static/style.css" />
+  <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
 </head>
 <body
   data-initial-offset="{{ items|length if items is defined else 0 }}"
@@ -78,11 +79,12 @@
         <div class="date">{{ item.published_at }}</div>
         {% endif %}
         <p>{{ item.summary }}</p>
-        {% if item.takeaways %}
-        <ul class="takeaways">
-          {% for t in item.takeaways %}<li>{{ t }}</li>{% endfor %}
-        </ul>
-        {% endif %}
+        <div class="save-article">
+          <svg viewBox="0 0 24 24" class="heart-icon">
+            <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/>
+          </svg>
+          <span>Save article</span>
+        </div>
       </div>
       {% endfor %}
     {% endif %}
